--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "publish:gh-pages": "git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
